# torchlib-opencv-gpu

./: CMakeLists.txt  README.md  main.cpp
GPU_gradient_test/: main.cpp  print_outs.txt
test_GPU_gradient/: CPU_gradient_OK_GPU_gradient_failes_CUDA10_1_libtorch1_6_0.txt  main.cpp
